--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "realtime-examples",
+  "name": "VoiceAgent",
+  "main": "main.js",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "electron": "electron .",
+    "start": "npm run electron"
   },
   "dependencies": {
     "@openai/agents": "^0.0.5",
     "@radix-ui/react-icons": "^1.3.2",
     "dotenv": "^16.4.7",
+    "electron": "^40.2.1",
+    "fs": "^0.0.1-security",
     "next": "^15.3.1",
     "openai": "^4.77.3",
     "react": "^19.0.0",
@@ -27,8 +29,14 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "typescript": "^5",
+    "wait-on": "^9.0.3"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
